<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorBackgroundFloating">

    <TextView
        android:id="@+id/tv_counterNumOfStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textAppearance="?textAppearanceHeadline1"
        app:layout_constraintEnd_toEndOf="@+id/tv_numOfStudents"
        app:layout_constraintStart_toStartOf="@+id/tv_numOfStudents"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="680" />

    <TextView
        android:id="@+id/tv_numOfStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_students"
        android:textAppearance="@style/Headline2TextAppearance.Dense"
        app:layout_constraintEnd_toStartOf="@+id/tv_numOfBestStudents"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_counterNumOfStudents" />

    <TextView
        android:id="@+id/tv_counterNumOfBestStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textAppearance="?textAppearanceHeadline1"
        app:layout_constraintEnd_toEndOf="@+id/tv_numOfBestStudents"
        app:layout_constraintStart_toStartOf="@+id/tv_numOfBestStudents"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="6" />

    <TextView
        android:id="@+id/tv_numOfBestStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_best_studnets"
        android:textAppearance="@style/Headline2TextAppearance.Dense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_numOfStudents"
        app:layout_constraintTop_toBottomOf="@+id/tv_counterNumOfBestStudents" />


    <!--   NEW ROW  -->

    <TextView
        android:id="@+id/tv_counterNumOfTeachers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="0"
        android:textAppearance="?textAppearanceHeadline1"
        app:layout_constraintBottom_toTopOf="@+id/tv_numOfTeachers"
        app:layout_constraintEnd_toEndOf="@+id/tv_numOfTeachers"
        app:layout_constraintStart_toStartOf="@+id/tv_numOfTeachers"
        app:layout_constraintTop_toBottomOf="@+id/tv_numOfStudents"
        app:layout_constraintVertical_bias="1.0"
        tools:text="50+" />

    <TextView
        android:id="@+id/tv_numOfTeachers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/num_teachers"
        android:textAppearance="@style/Headline2TextAppearance.Dense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_yearsExperience"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_counterYearsExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAppearance="?textAppearanceHeadline1"
        app:layout_constraintBottom_toTopOf="@+id/tv_yearsExperience"
        app:layout_constraintEnd_toEndOf="@+id/tv_yearsExperience"
        app:layout_constraintStart_toStartOf="@+id/tv_yearsExperience"
        app:layout_constraintTop_toBottomOf="@+id/tv_numOfBestStudents"
        app:layout_constraintVertical_bias="1.0"
        tools:text="74" />

    <TextView
        android:id="@+id/tv_yearsExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Liczba olimpijczyków"
        android:textAppearance="@style/Headline2TextAppearance.Dense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_numOfTeachers" />

</androidx.constraintlayout.widget.ConstraintLayout>